# budget

./: Cargo.toml
migrations/2020-01-05-150724_create_transactions/: up.sql
migrations/2020-01-25-175624_create_categories/: down.sql  up.sql
migrations/2020-01-25-175653_create_categoriestransactions/: down.sql  up.sql
src/: lib.rs  main.rs  models.rs  schema.rs
