[package]
name = "budget"
version = "0.1.0"
authors = ["Daniel Rees <daniel_james_rees@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
csv = "1.1"
serde = { version = "1.0", features = ["derive"] }
dotenv = "0.15.0"
pq = "1.4.0"
diesel = {version = "1.4.3", features = ["postgres","numeric"]}
bigdecimal = {version = "0.1.0", features = ["serde"]}
rocket = "0.4.4"
rocket_contrib = "0.4.4"