[package]
name = "budget"
version = "0.1.0"
authors = ["Daniel Rees <daniel_james_rees@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
csv = "1.1"
serde = { version = "1.0", features = ["derive"] }
dotenv = "0.15.0"
pq = "1.4.0"
diesel = {version = "1.4.3", features = ["postgres","numeric"]}
bigdecimal = {version = "0.1.0", features = ["serde"]}
actix-web = "2"
actix-rt = "1.1.1"
futures = "0.3.5"
actix-multipart = "0.2.0"
sanitize-filename = "0.2.1"